# azure_artifact

./: .pypirc  azure-pipelines.yml  requirements.txt  setup.cfg  setup.py
tests/: test_app.py
